--- a/src/index.njk
+++ b/src/index.njk
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta name="description" content="Comprehensive ranking of Georgia Auto Dealer License Classes for individuals seeking to obtain their dealer license in the state of Georgia.">
     <meta name="keywords" content="Dealer License Class, Georgia Dealer License Class, GA Dealer License Class, Dealer License Class Near Me, Used Auto Dealer Training, Used Car Dealer License, Car Dealer Training, Auto Dealer Training, Auto Dealership Training, Used Car Dealer Training, Dealer License GA, Auto Dealer License Class, Car Dealer License Class, Georgia Dealer License, How to Get a Dealers License in GA">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <header>
